--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,74 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container {
+    position: relative;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+/* ----- GAME START ----- */
+#game-start_box {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    z-index: 2;
+    background-color: aqua;
+    /* display: none; */
+}
+
+#game-start_box h1 {
+    width: 100%;
+    font-size: 64px;
+    padding-top: 80px;
+}
+
+#difficulty-selector_box {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+#game-start_box .mode-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    margin-top: 24px;
+    padding: 14px 52px;
+    font-size: 20px;
+    font-weight: 500;
+    border: none;
+    border-radius: 14px;
+    box-shadow: 1px 1px 4px grey;
+}
+
+#start-game_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+    margin: 64px auto;
+    padding: 14px 52px;
+    font-size: 30px;
+    font-weight: 500;
+    border: none;
+    border-radius: 14px;
+    box-shadow: 1px 1px 4px grey;
+}
+/* ----- /GAME START ----- */
+
+.slot {
+    width: calc(100% / 10);
+    height: 90px;
+    border: 6px solid white;
+    border-radius: 12px;
+    background-color: wheat;
+    background-image: url(../img/thumb\ up.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow: 1px 1px 2px grey;
+}
