--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     width: 100%;
     height: 100vh;
     z-index: 2;
-    background-color: aqua;
+    background-color: white;
     /* display: none; */
 }
 
@@ -47,6 +47,23 @@
     box-shadow: 1px 1px 4px grey;
 }
 
+.mode-button:hover {
+    transform: scale(105%);
+}
+
+#easy:focus {
+    background-color: greenyellow;
+}
+
+#normal:focus {
+    background-color: yellow;
+}
+
+#hard:focus {
+    background-color: red;
+    color: white;
+}
+
 #start-game_button {
     display: flex;
     justify-content: center;
@@ -60,17 +77,64 @@
     border-radius: 14px;
     box-shadow: 1px 1px 4px grey;
 }
+
+#start-game_button:hover {
+    transform: scale(110%);
+    background-color: lightskyblue;
+}
 /* ----- /GAME START ----- */
 
-.slot {
+.safe-slot, .bomb-slot, .slot-overlay {
     width: calc(100% / 10);
     height: 70px;
     border: 6px solid white;
     border-radius: 12px;
-    background-color: wheat;
-    background-image: url(../img/thumb\ up.png);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
     box-shadow: 1px 1px 2px grey;
+    cursor: pointer;
 }
+
+.safe-slot {
+    background-color: wheat;
+    background-image: url(../img/thumb\ up.png);
+}
+
+.bomb-slot {
+    background-color: rgb(255, 118, 118);
+    background-image: url(../img/minato.png);
+}
+
+.slot-overlay {
+    background-color: azure;
+    background-image: url(../img/Question_Mark.png);
+}
+
+.safe-slot:hover, .bomb-slot:hover {
+    transform: scale(105%);
+}
+
+#score-box {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 40px;
+}
+
+#score-box h3 {
+    margin: 0;
+    font-weight: 700;
+}
+
+#score {
+    display: flex;
+    width: 280px;
+    margin-left: 20px;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    text-shadow: 1px 1px 4px black;
+    color: orangered;
+}
+
