--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,6 @@
 }
 /* ----- /GAME START ----- */
 
-.slot {
-    position: relative;
-}
-
 .slot, .slot-overlay {
     width: calc(100% / 10);
     height: 70px;
@@ -97,7 +93,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     box-shadow: 1px 1px 2px grey;
-    cursor: pointer;
 }
 
 .safe-slot {
@@ -111,15 +106,12 @@
 }
 
 .slot-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
     background-color: azure;
     background-image: url(../img/Question_Mark.png);
-    /* display: none; */
+    cursor: pointer;
 }
 
-.safe-slot:hover, .bomb-slot:hover {
+.slot-overlay:hover {
     transform: scale(105%);
 }
 
@@ -127,7 +119,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 #score-box h3 {
