--- a/css/style.css
+++ b/css/style.css
@@ -129,12 +129,17 @@
 
 #score {
     display: flex;
+    flex-grow: 1;
     width: 280px;
     margin-left: 20px;
-    justify-content: center;
     align-items: center;
     font-size: 50px;
     text-shadow: 1px 1px 4px black;
     color: orangered;
 }
 
+#reset {
+    padding: 14px 28px;
+    border: 1px solid grey;
+    border-radius: 14px;
+}
