--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@
     height: 100vh;
     z-index: 2;
     background-color: white;
-    /* display: none; */
 }
 
 #game-start_box h1 {
@@ -68,7 +67,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 160px;
     margin: 64px auto;
     padding: 14px 52px;
     font-size: 30px;
@@ -119,6 +117,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    height: 100%;
     margin-bottom: 60px;
 }
 
@@ -130,7 +129,6 @@
 #score {
     display: flex;
     flex-grow: 1;
-    width: 280px;
     margin-left: 20px;
     align-items: center;
     font-size: 50px;
@@ -148,4 +146,59 @@
 #reset:hover {
     background-color: maroon;
     color: white;
+}
+
+@media screen and (max-width: 520px) {
+    .container {
+        width: 100%;
+        padding: 12px;
+    }
+    #game-start_box {
+        width: 100%;
+        height: 100vh;
+        z-index: 2;
+        background-color: white;
+    }    
+    #game-start_box h1 {
+        font-size: 42px;
+        padding-top: 40px;
+    }
+    #difficulty-selector_box {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    #game-start_box .mode-button {
+        width: 34px;
+        margin-top: 12px;
+        padding: 12px 42px;
+        font-size: 16px;
+        font-weight: 500;
+    }
+    #start-game_button {
+        margin: 36px auto;
+        padding: 12px 38px;
+        font-size: 24px;
+    }
+    .slot, .slot-overlay {
+        width: calc(100% / 10);
+        height: 50px;
+        font-size: 12px;
+    }
+    #main-game_box {
+        padding: 12px 0;
+    }
+    #score-box h3 {
+        font-size: 24px;
+        font-weight: 500;
+        margin-left: 12px;
+    }
+    #score {
+        margin-left: 8px;
+        margin-right: 8px;
+        font-size: 32px;
+    }
+    #reset {
+        padding: 12px 20px;
+        font-size: 12px;
+    }
 }
