--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,10 @@
     color: white;
 }
 
+.disabled {
+    pointer-events: none;
+}
+
 @media screen and (max-width: 520px) {
     .container {
         width: 100%;
